--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,7 +18,10 @@
     "react-router-dom": "^6.26.2"
   },
   "devDependencies": {
+    "@types/react": "^18.3.28",
+    "@types/react-dom": "^18.3.7",
     "@vitejs/plugin-react": "^4.3.1",
+    "typescript": "^5.9.3",
     "vite": "^5.4.2"
   }
 }
